# pyg4ometry

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CHANGES.md  CITATION.cff  CMakeLists.txt  CMakeLists_setup.txt  LICENSE  README.md  codecov.yml  pyproject.toml  setup.cfg  setup.py
.github/docker/: ubuntu22-pyg4ometry
.github/patches/: TDocStd_Application.patch
.github/workflows/: distribution.yml  main.yml
cmake/modules/: DynamicVersion.cmake  FindPythonExtensions.cmake  SkbuildUtils.cmake
docker/: Dockerfile  packages
docs/: Makefile
docs/examples/: simpleBody.py  simpleCollimator.py  simpleDetector.py
docs/source/: .py_api_exclude  analysing.rst  authorship.rst  citation.rst  cli.rst  comparing.rst  conf.py  creating.rst  developer.rst  devmanual.rst  exporting.rst  index.rst  installation.rst  introduction.rst  licence.rst  loading.rst  moduledocs.rst  pythonscripting.rst  tutorials.rst  tutorialsAdvanced.rst  validating.rst  version_history.rst  viewing.rst
examples/: cbpm.py  hep_detector.py  lhc_blm.py  support.py  vacuum_systems.py
pyg4ometry/: COPYING.txt  Makefile  __init__.py  cli.py  config.py  exceptions.py  transformation.py  utils.py
pyg4ometry/bdsim/: __init__.py  scoring_mesh.py
pyg4ometry/compare/: _Compare.py
pyg4ometry/convert/: __init__.py  fluka2Geant4.py  fluka2g4materials.py  freecad2Fluka.py  gdml2stl.py  geant42Fluka.py  geant42Vtk.py  oce2Geant4.py
pyg4ometry/features/: __init__.py  _accelerator.py  algos.py  beamPipe.py
pyg4ometry/fluka/: Body.py  BodyTransform.py  FlukaLexer.g4  FlukaParser.g4  FlukaParser.py  FlukaRegistry.py  Reader.py  Region.py  RegionParserVisitor.py  Writer.py  __init__.py  bdsim_utils.py  body.py  boolean_algebra.py  card.py  directive.py  flair.py  flair_template.flair  fluka_registry.py  geometry.py  material.py  materials.py  model.py  parser.py  preprocessor.py  reader.py  region.py  vector.py
pyg4ometry/flukaNew/: Body.py  FlukaRegistry.py  Reader.py  Region.py  Vector.py  __init__.py
pyg4ometry/flukaOld/: FlukaParserListener.py  FlukaParserVisitor.py  RegionLexer.g4  RegionLexer.py  RegionParser.g4  RegionParser.py  RegionParserImplementation.py  __init__.py  generate-parsers
pyg4ometry/freecad/: Gdml.py  Gdml_017.py  Reader.py  __init__.py
pyg4ometry/gdml/: Defines.py  GdmlDefines.py  Reader.py  ReaderNew.py  Units.py  Writer.py  WriterNew.py  WriterOld.py  __init__.py
pyg4ometry/geant4/: AssemblyVolume.py  BorderSurface.py  Compare.py  DivisionVolume.py  Expression.py  GdmlDefines.py  LogicalVolume.py  Material.py  Parameter.py  ParameterVector.py  ParameterisedVolume.py  PhysicalVolume.py  Registry.py  ReplicaVolume.py  SkinSurface.py  SurfaceBase.py  _Material.py  __init__.py  bdsim_materials.txt  compare.py  nist_elements.txt  nist_materials.txt
pyg4ometry/gui/: GeometryModel.py  MainWindow.py  __init__.py  example.py  example1.py
pyg4ometry/io/: ROOT.py  ROOTTGeo.py  __init__.py
pyg4ometry/opencascade/: CMakeLists.txt  test1.cc  test2.cc
pyg4ometry/pycgal/: CMakeLists.txt  Makefile  Makefile.MacPorts  Makefile.Ubuntu-20.04  __init__.py  algo.cxx  algo.h  cgal.py  core.cxx  core.h  core.py  geom.cxx  geom.h  pyg4_cgal.cpp
pyg4ometry/pycgal/old/: Makefile.MacBrew
pyg4ometry/pycsg/: core.pyx  geom.py  geom.pyx  geom_jit.py
pyg4ometry/pyfluka/: COPYING.txt  LICENSE.txt  Makefile  README.rst  setup.py  test_geometry.py
pyg4ometry/pygeometry/: __init__.py  make.bat  setup.py  transformation.py
pyg4ometry/pyoce/: Reader.py  __init__.py  funcs.py  oce.cxx  oce.h
pyg4ometry/stl/: Reader.py
pyg4ometry/visualisation/: Colour.py  Convert.py  GafferWriter.py  Mesh.py  MeshBuild.py  RenderWriter.py  Viewer.py  ViewerBase.py  VisualisationOptions.py  VtkExporter.py  VtkViewer.py  VtkViewerNew.py  Writer.py  __init__.py  colour.py  colours.ini
pyg4ometry/vtk/: Viewer.py
src/pkgplaceholder/: __init__.py  core.py
src/pyg4ometry/: CMakeLists.txt  LICENCE.txt  Makefile  __init__.py  _version.py  cli.py  config.py  exceptions.py  meshutils.py  transformation.py  utils.py
src/pyg4ometry/pycgal/: Aff_transformation_3.cxx  Bbox_3.cxx  CGAL.cxx  CMakeLists.txt  Circle_3.cxx  Direction_3.cxx  HalfPlane.py  Iso_cuboid_3.cxx  Line_3.cxx  Nef_polyhedron_3.cxx  Partition_traits_2_Polygon_2.cxx  Plane_3.cxx  Point_2.cxx  Point_3.cxx  Polygon_2.cxx  Polygon_mesh_processing.cxx  Polygon_with_holes_2.cxx  Polyhedron_3.cxx  Ray_3.cxx  Segment_3.cxx  Surface_mesh.cxx  Triangle_2.cxx  Triangle_3.cxx  Vector_2.cxx  Vector_3.cxx  __init__.py  algo.cxx  algo.h  core.py  geom.cxx  geom.h  pyg4_cgal.cpp  pythonHelpers.py
src/pyg4ometry/pycgal/old/: Makefile  Makefile.Ubuntu-20.04  old_core.py  polyhedron_load.cpp
src/pyg4ometry/pycgal_old/: CMakeLists.txt  __init__.py  algo.cxx  algo.h  cgal.py  core.cxx  core.h  geom.cxx  geom.h  meson.build  pyg4_cgal.cpp
src/pyg4ometry/pycsg/: CMakeLists.txt  core.c  core.pyx  geom.c  geom.pyx  meson.build
src/pyg4ometry/pyoce/: BRep.cxx  BRepBuilder.cxx  BRepMesh.cxx  BRepPrimAPI.cxx  CMakeLists.txt  Geom.cxx  Message.cxx  Poly.cxx  Reader.py  STEPCAFControl.cxx  Standard.cxx  StlAPI.cxx  TCollection.cxx  TDF.cxx  TDataStd.cxx  TDocStd.cxx  TKernel.cxx  TNaming.cxx  TopAbs.cxx  TopExp.cxx  TopLoc.cxx  TopoDS.cxx  XCAFApp.cxx  XCAFDoc.cxx  __init__.py  findSymbol.sh  funcs.py  gp.cxx  meson.build  oce.cxx  pythonHelpers.py
src/pyg4ometry/pyoce/patches/: TDocStd_Application.hxx
tests/: conftest.py  test_core.py  test_import.py
tests/analysis/: T001_simple_dump.py  test_flukaAnalysis.py
tests/cli/: test_cli.py
tests/compare/: ComparisonAssemblyVolume.py  ComparisonDivisionVolume.py  ComparisonLogicalVolume.py  ComparisonParameterisedVolume.py  ComparisonReplicaVolume.py  ComparisonSolid.py  test_Comparison.py
tests/convert/: Geant42FlukaConversion.py  T001_geant4Box2Fluka.gdml  T001_geant4Box2Fluka.py  T002_geant4Tubs2Fluka.gdml  T002_geant4Tubs2Fluka.py  T003_geant4CutTubs2Fluka.gdml  T003_geant4CutTubs2Fluka.py  T004_geant4Cons2Fluka.gdml  T004_geant4Cons2Fluka.py  T005_geant4Para2Fluka.gdml  (+76 more)
(+997 files in other folders)
