[metadata]
name = pkgplaceholder
version = attr: pkgplaceholder._version.version
description = A description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ghuserplaceholder/pkgplaceholder
author = Your Name
author_email = user@domain.com
maintainer = Someone
license = Some License
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development

[options]
python_requires = >=3.6
include_pkgplaceholder_data = True
pkgplaceholder_dir =
    = src
pkgplaceholders = find:
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
all =
    pkgplaceholder[docs,test]
docs =
    myst-parser
    sphinx
    sphinx-multiversion-pre-post-build>=0.2.4
    sphinx-rtd-theme
test =
    coverage
    pre-commit
    pytest>=6.0

[flake8]
extend-ignore = E203, E501
