[metadata]
name = pyg4ometry
version = attr: pyg4ometry._version.version
description = Geometry package for high energy physics (Geant4, Fluka)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gipert/pyg4ometry
author = Stewart T. Boogert
author_email = stewart.boogert@rhul.ac.uk
maintainer = Stewart T. Boogert
license = GPL3
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development

[options]
packages = find:
install_requires =
    antlr4-python3-runtime==4.7.1
    configparser
    matplotlib
    networkx
    numpy
    pandas
    scipy
    sympy>=1.7
    testtools
    vtk
    GitPython
python_requires = >=3.6.8
include_package_data = True
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
all =
    pyg4ometry[docs,test]
docs =
    furo
    myst-parser
    sphinx
    sphinx-copybutton
test =
    pre-commit
    pytest>=6.0
    pytest-cov

[options.package_data]
pyg4ometry.convert = src/pyg4ometry/convert/*.csv
pyg4ometry.fluka = src/pyg4ometry/fluka/*.flair
pyg4ometry.geant4 = src/pyg4ometry/geant4/*.txt
pyg4ometry.visualisation = src/pyg4ometry/visualisation/*.ini

[flake8]
extend-ignore = E203, E501, D10
